--- a/style.css
+++ b/style.css
@@ -1,5 +1,32 @@
-/* add code here to make your image 300px tall, have a border-radius of 25px, and a 1px black solid border.*/
-
+img {
+    height: 300px;
+    border-radius: 25px;
+    border: 1px solid black;
+}
 /* add code here to change the color and font family of your band's name/title */
+h1 {
+    color: #dfb32a;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 250%
+}
 
+h2, h3 {
+    font-size: 140%;
+    font-family: didot, serif;
+    color: #ffdd71
+
+}
+
+.center {
+    text-align: center;
+}
+
+body {
+    background-color: #133154;
+}
+
+p, li {
+    font-family: optima, sans-serif;
+    color: #dfb32a;
+}
 /* Bonus: change the color of your list elements */
